# nbits

./: Cargo.toml  README.md
src/: chunk.rs  ibits.rs  iter.rs  lib.rs  nbits.rs  operation.rs  xbits.rs
src/bits/: arith.rs  bit.rs  mod.rs  offset.rs
src/core/: arith.rs  bitwise.rs  iter.rs  mod.rs
src/nbits/: arith.rs  bitwise.rs  convert.rs  mask.rs  mod.rs  offset.rs
src/xbits/: arith.rs  bitwise.rs  convert.rs  iter.rs  mod.rs  offset.rs
tests/: chunk.rs  chunk_test.rs  iter.rs  iter_test.rs  nbits_arith_test.rs  nbits_bitwise_test.rs  offset_test.rs  operation.rs
tests/nbits/: bit_test.rs
