[package]
name = "nbit"
version = "0.2.0"
authors = ["Artimonist <artimonist@gmail.com>"]
description = "An easy-to-use bits iterator and chunk tool."
homepage = "https://artimonist.org/"
repository = "https://github.com/artimonist/nbit/"

license = "MIT"
keywords = ["bitcoin", "wallet", "mnemonic", "crypto", "btc"]
categories = ["cryptography"]
# rust-version = "1.84"
edition = "2021"
crate-type = ["lib"]

[dependencies]

[dev-dependencies]
hex = "0.4.3"
